--- a/toanchor.html
+++ b/toanchor.html
@@ -29,8 +29,11 @@ foreach (let u in uu){
 
 
 </textarea>
+ <form >
+  
 <button name="ta" value="toAnchor" onclick="toAnchor("i"); return true;">
-<textarea name="o">
+ </form>
+ <textarea name="o">
 
 </textarea>
 
