--- a/toanchor.html
+++ b/toanchor.html
@@ -22,22 +22,25 @@ foreach (let u in uu){
 
 
 <body>
-
-<textarea name="i">
-
-
+<form>
+<textarea name="i" rows="100">
 
 
-</textarea>
- <form >
-  
+
+
+</textarea rows="100">
+ 
 <button name="ta" value="toAnchor" onclick="toAnchor("i"); return true;">
- </form>
+ 
  <textarea name="o">
 
 </textarea>
 
-
+ </form>
 </body>
 
 </html>
+ 
+ 
+ 
+ 
