--- a/toanchor.html
+++ b/toanchor.html
@@ -22,7 +22,7 @@ foreach (let u in uu){
 
 
 <body>
-<form>
+<form id="tif">
 <textarea name="i" rows="100">
 
 
@@ -30,7 +30,7 @@ foreach (let u in uu){
 
 </textarea rows="100">
  
-<button name="ta" value="toAnchor" onclick="toAnchor("i"); return true;">
+<button type="submit" name="ta" form="tif" value="toAnchor" onclick="toAnchor("i"); return true;">
  
  <textarea name="o">
 
