--- a/toanchor.html
+++ b/toanchor.html
@@ -23,16 +23,16 @@ foreach (let u in uu){
 
 <body>
 <form id="tif">
-<textarea name="i" rows="100">
+<textarea name="i" cols="40" rows="80">
 
 
 
 
-</textarea rows="100">
+</textarea >
  
-<button type="submit" name="ta" form="tif" value="toAnchor" onclick="toAnchor("i"); return true;">
+<input type="submit" name="ta" form="tif" value="toAnchor" onclick="toAnchor("i"); return true;">
  
- <textarea name="o">
+ <textarea name="o" cols="40" rows="80">
 
 </textarea>
 
