--- a/daily.html
+++ b/daily.html
@@ -3,23 +3,24 @@
 
 <body>
 
-<a href=" "> </a>
-<a href=" "> </a>
-<a href=" "> </a>
-<a href=" "> </a>
-<a href=" "> </a>
-<a href=" "> </a>
-<a href=" "> </a>
-<a href=" "> </a>
-<a href=" "> </a>
-<a href=" "> </a>
-<a href=" "> </a>
-<a href=" "> </a>
-<a href=" "> </a>
-<a href=" "> </a>
-<a href=" "> </a>
-<a href=" "> </a>
-<a href=" "> </a>
+<a href="chessgames.com ">cg </a>
+<a href=" chessbase.com"> cb</a>
+<a href="draftkings.com ">dk </a>
+  <a href="pcoptimum.ca">pcopt</a>
+  <a href=" github.com">gh </a>
+<a href=" archive.org">archive </a>
+<a href=" gutenberg.org">gutenberg </a>
+<a href=" google.com"> google</a>
+<a href=" toronto.craigslist.org">tor.cr </a>
+<a href=" duckduckgo.com"> ddgo</a>
+<a href=" startpage.com"> startpage</a>
+<a href=" qwant.com">qwant </a>
+<a href=" bing.com">bing </a>
+<a href=" walmart.ca"> walmartca</a>
+<a href=" walmart.com"> walmartcom</a>
+<a href=" bestbuy.ca">bestbuyca </a>
+<a href=" futureshop.ca">futureshop </a>
+<a href=" shoppersdrugmart.ca">shoppers </a>
 <a href=" "> </a>
   
   <a href="yahoo.com">yahoo</a>
