--- a/search.html
+++ b/search.html
@@ -33,14 +33,23 @@ function getTimeDate() {
     }, 3000);
 */
 </script>
-
+<script> 
+	function go (url,q)
+	{
+	let u=encurl(url + q);
+		window.open(u);
+	
+	}
+	</script>
+	
+	
 <div name="ddd" style="font-size:36" >date:<textarea name="ttt"></textarea> </div>
  <form>
   <input name="q" value="" size="30" autofocus> 
  
 
  <button type="submit" formaction='http://google.com' accesskey="g"  formmethod="get" formtarget="_blank">google</button>  
-<button type="submit" formaction='http://duckduckgo.com' accesskey="d"  formmethod="get" formtarget="_blank">duck</button>  
+<button type="submit" onclick="go('http://duckduckgo.com','q')" accesskey="d"  >duck</button>  
 
  <button type="submit" formaction='http://youtube.com' accesskey="y"  formmethod="get" formtarget="_blank">youtube</button>  
 
