--- a/search.html
+++ b/search.html
@@ -2,7 +2,7 @@
 <body>
 <script>
  function encurl(u){
-var txt=document.getElementById("st").value;
+var txt=document.getElementById("q").value;
 var encodetxt= encodeURI(txt);
 alert(u);
 alert(txt);
@@ -16,6 +16,7 @@ var bh='<button type="submit" formaction=\"' + u + '\" accesskey=\" + k + '\" fo
 
 return 1;  
 }
+	// qqqqqqq11qqq1q
 </script>
 <script>
 function getTimeDate() {
