--- a/search.html
+++ b/search.html
@@ -35,12 +35,14 @@ function getTimeDate() {
 */
 </script>
 <script> 
-	function go (url,q)
+	function go (url)
 	{
-	let u=encurl(url + q);
-		window.open(u);
+	//let u=encurl(url + q);
+		window.open(url);
 	
 	}
+	
+	//// qqqqqqqqq1q1q
 	</script>
 	
 	
@@ -50,7 +52,7 @@ function getTimeDate() {
  
 
  <button type="submit" formaction='http://google.com' accesskey="g"  formmethod="get" formtarget="_blank">google</button>  
-<button type="submit" onclick="go('http://duckduckgo.com','q')" accesskey="d"  >duck</button>  
+<button type="submit" onclick="go('http://duckduckgo.com/?q=',)" accesskey="d"  >duck</button>  
 
  <button type="submit" formaction='http://youtube.com' accesskey="y"  formmethod="get" formtarget="_blank">youtube</button>  
 
