--- a/search.html
+++ b/search.html
@@ -42,7 +42,7 @@ function getTimeDate() {
 	
 	}
 	
-	//// qqqqqqqqq1q1q
+	//// qqqqqqqqq1q1qqqqqqqqqq
 	</script>
 	
 	
@@ -52,7 +52,7 @@ function getTimeDate() {
  
 
  <button type="submit" formaction='http://google.com' accesskey="g"  formmethod="get" formtarget="_blank">google</button>  
-<button type="submit" onclick="go('http://duckduckgo.com/?q=',)" accesskey="d"  >duck</button>  
+<button type="submit" onclick="go('http://duckduckgo.com/?q=')" accesskey="d"  >duck</button>  
 
  <button type="submit" formaction='http://youtube.com' accesskey="y"  formmethod="get" formtarget="_blank">youtube</button>  
 
