--- a/search.html
+++ b/search.html
@@ -37,10 +37,13 @@ function getTimeDate() {
 <script> 
 	function go (url)
 	{
+		var q=document.getElementById("q").value;
+
 	//let u=encurl(url + q);
-		window.open(url);
+		window.open(url+q);
 	
 	}
+	//  qqqqqqq
 	
 	//// qqqqqqqqq1q1qqqqqqqqqq
 	</script>
