--- a/search.html
+++ b/search.html
@@ -39,7 +39,7 @@ function getTimeDate() {
 	{
 		var q=document.getElementById("q").value;
 
-	//let u=encurl(url + q);
+	//let u=encurl(url . q);
 		window.open(url+q);
 	
 	}
