--- a/search.html
+++ b/search.html
@@ -40,7 +40,7 @@ function getTimeDate() {
 		var q=document.getElementById("q").value;
 
 	//let u=encurl(url . q);
-		window.open(url+q);
+		window.open(url . q);
 	
 	}
 	//  qqqqqqq
