--- a/search.html
+++ b/search.html
@@ -38,7 +38,7 @@ function getTimeDate() {
 	function go (url)
 	{
 		var q=document.getElementById("q").value;
-
+alert (q);
 	//let u=encurl(url + q);
 		window.open(url + q);
 	
