--- a/search.html
+++ b/search.html
@@ -1,5 +1,5 @@
 <html>
-<body>
+<head>
 <script>
  function encurl(u){
 var txt=document.getElementById("q").value;
@@ -48,6 +48,9 @@ alert (q);
 	//// qqqqqqqqq1q1qqqqqqqqqq
 	</script>
 	
+	</head>
+	
+	<body>
 	
 <div name="ddd" style="font-size:36" >date:<textarea name="ttt"></textarea> </div>
  <form>
