--- a/search.html
+++ b/search.html
@@ -57,7 +57,13 @@ alert (q);
   <input name="q" value="" size="30" autofocus> 
  
 <button type="submit" onclick="go('http://duckduckgo.com/?q=')" accesskey="d"  >duck</button>  
+ <button type="submit" formaction='https://archive.org/search.php?query=' accesskey="a"  formmethod="get" formtarget="_blank">archive</button>  
+ <button type="submit" formaction='https://www.gutenberg.org/ebooks/search/?query=' accesskey=""  formmethod="get" formtarget="_blank">gutenberg</button>  
+ <button type="submit" formaction='http://google.com' accesskey="g"  formmethod="get" formtarget="_blank">google</button>  
+ <button type="submit" formaction='https://web.archive.org/web/*/http://' accesskey=""  formmethod="get" formtarget="_blank">wayback</button>  
+ <button type="submit" formaction='http://google.com' accesskey="g"  formmethod="get" formtarget="_blank">google</button>  
 
+	 
  <button type="submit" formaction='http://google.com' accesskey="g"  formmethod="get" formtarget="_blank">google</button>  
 
  <button type="submit" formaction='http://youtube.com' accesskey="y"  formmethod="get" formtarget="_blank">youtube</button>  
