--- a/search.html
+++ b/search.html
@@ -66,8 +66,24 @@ function getTimeDate() {
 	 
  <button type="submit" formaction='http://google.com' accesskey="g"  formmethod="get" formtarget="_blank">google</button>  
 
- <button type="submit" formaction='http://youtube.com' accesskey="y"  formmethod="get" formtarget="_blank">youtube</button>  
+ <button type="submit" onclick="go('https://www.youtube.com/results?search_query=')" accesskey="" > yt</button>  
 
+	  <button type="submit" onclick="go('https://twitter.com/search?l=&q=')" accesskey="" >twadvsearch </button>  
+ <button type="submit" onclick="go('https://twitter.com/search?q=')" accesskey="" > twsearch</button>  
+ <button type="submit" onclick="go('https://duckduckgo.com/?iaxm=maps&q=')" accesskey="" >dmap </button>  
+ <button type="submit" onclick="go('https://duckduckgo.com/?ia=news&q=')" accesskey="" > dnews</button>  
+ <button type="submit" onclick="go('https://duckduckgo.com/?iax=videos&q=')" accesskey="" > dvideo</button>  
+ <button type="submit" onclick="go('https://duckduckgo.com/?iax=images&q=')" accesskey="" > dimages</button>
+ <button type="submit" onclick="go(' ')" accesskey="" > </button>  
+ <button type="submit" onclick="go(' ')" accesskey="" > </button>  
+ <button type="submit" onclick="go(' ')" accesskey="" > </button>  
+ <button type="submit" onclick="go(' ')" accesskey="" > </button>  
+ <button type="submit" onclick="go(' ')" accesskey="" > </button>  
+ <button type="submit" onclick="go(' ')" accesskey="" > </button>  
+ <button type="submit" onclick="go(' ')" accesskey="" > </button>  
+
+	 
+	 
 <input type="submit" formaction="anonymouse.org/cgi-bin/anon-redirect.cgi?what=" formmethod="POST" value="anonmsurf">
  </form>
 
